platform/flux/public-services/container-registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry
  labels:
    app.kubernetes.io/name: container-registry
spec:
  selector:
    app.kubernetes.io/name: container-registry
  ports:
    - name: http
      port: 5000
      targetPort: http
