platform/flux/public-services/container-registry/registry-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry
  labels:
    app.kubernetes.io/name: container-registry
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`registry.tessaro.dino.home`)
      kind: Rule
      services:
        - name: container-registry
          port: 5000
